<resources>
    <string name="app_name">House Mate</string>

    <string name="label_shopping_list">Shopping List</string>
    <string name="label_chores_list">Chores</string>

    <string name="appbar_more_options">More Options</string>
    <string name="appbar_duplicate">Duplicate</string>
    <string name="appbar_delete">Delete</string>
    <string name="appbar_edit">Edit</string>
    <string name="appbar_more_place_holder">Place Holder</string>

    <string name="hint_quantity">quantity</string>
    <string name="hint_name">name</string>
    <string name="hint_when_needed">when needed</string>
    <string name="hint_where_to_get">where to get it</string>
    <string name="hint_cost">cost</string>
    <string name="hint_volunteer">volunteer</string>

    <string name="label_priority">Priority:</string>
    <string name="label_priority_1">Urgent</string>
    <string name="label_priority_2">Not Urgent</string>
    <string name="label_priority_3">Needed Eventually</string>

<!--    probably get rid of these-->
    <string name="label_difficulty">Difficulty:</string>
    <string name="label_difficulty_1">Simple</string>
    <string name="label_difficulty_2">Medium Challenge</string>
    <string name="label_difficulty_3">Challenging</string>

    <string name="add_item_button">add item</string>

    <!--dataBound values-->
    <string name="shopping">shopping</string>
    <string name="chores">chores</string>
</resources>
