<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/shopping_list_edit"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/appbar_edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/shopping_list_more_options"
        android:icon="@drawable/ic_more_options_24dp"
        android:title="@string/appbar_more_options"
        app:showAsAction="ifRoom">

        <!--suppress AndroidElementNotAllowed -->
        <item
            android:id="@+id/shopping_list_option_duplicate"
            android:title="@string/appbar_duplicate"/>
        <!--suppress AndroidElementNotAllowed -->
        <item
            android:id="@+id/shopping_list_option_delete"
            android:title="@string/appbar_delete" />

    </item>

</menu>