<?xml version="1.0" encoding="utf-8"?>

<!--THIS IS FROM A MEDIUM ARTICLE EXAMPLE. notice the 'character' variable instead of 'viewmodel'-->
<!--https://medium.com/mindful-engineering/data-binding-in-android-9ed92a68f9f6-->

<!--    <?xml version="1.0" encoding="utf-8"?>-->
<!--<layout>-->
<!--<data>-->
<!--    <variable-->
<!--        name="character"-->
<!--        type="com.example.databindingsample.data.randomcharacter.entity.CharacterItem" />-->
<!--</data>-->

<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/charItem"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:background="?android:selectableItemBackground"-->
<!--    android:clickable="true"-->
<!--    android:focusable="true"-->
<!--    android:padding="@dimen/dp_10">-->

<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/ivCharacterProfile"-->
<!--        android:layout_width="@dimen/dp_100"-->
<!--        android:layout_height="@dimen/dp_100"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@drawable/avatar"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:profileImageUrl="@{character.image}" />-->

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/tvCharacterName"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/dp_10"-->
<!--        android:text="@{`Name : ` + character.name}"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="@dimen/sp_20"-->
<!--        app:layout_constraintStart_toEndOf="@id/ivCharacterProfile"-->
<!--        app:layout_constraintTop_toTopOf="@id/ivCharacterProfile"-->
<!--        tools:text="Devid" />-->

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/tvGender"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/dp_5"-->
<!--        android:text="@{`Gender : ` + character.gender}"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="@dimen/sp_20"-->
<!--        app:layout_constraintStart_toStartOf="@id/tvCharacterName"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvCharacterName"-->
<!--        tools:text="Devid" />-->

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/tvStatus"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/dp_5"-->
<!--        android:text="@{`Status : ` + character.status}"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="@dimen/sp_20"-->
<!--        app:layout_constraintStart_toStartOf="@id/tvCharacterName"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvGender"-->
<!--        tools:text="Devid" />-->

<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/ivStatus"-->
<!--        android:layout_width="@dimen/dp_15"-->
<!--        android:layout_height="@dimen/dp_15"-->
<!--        android:layout_marginStart="@dimen/dp_10"-->
<!--        android:background="@drawable/shape_status"-->
<!--        android:backgroundTint="@{character.status.equalsIgnoreCase(`Alive`) ? @color/green : @color/red }"-->
<!--        android:elevation="@dimen/dp_10"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/tvStatus"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvStatus"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvStatus" />-->


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
<!--</layout>-->
<!--    view raw-->
<!--    item_character.xml hosted with ❤ by GitHub-->


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.aldreduser.housemate.ui.main.viewmodels.ListsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.main.activities.AddShoppingItemActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/shopping_list_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/add_item_top_appbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:navigationIcon="@drawable/ic_navigation_24dp"
                app:titleTextColor="@color/toolbarItemsLight" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopping_list_appbar_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/item_quantity"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_quantity"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/item_quantity_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.quantity}"
                            android:inputType="number|numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/item_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minWidth="160dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:hint="@string/hint_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/item_quantity"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/item_name_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.name}"
                            android:inputType="textShortMessage" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TipTime.TextView"
                    android:text="@string/label_difficulty"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" />

                <RadioGroup
                    android:id="@+id/choose_difficulty_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/difficulty_button_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:checked="@{viewModel.difficulty.equals(@string/label_priority_1)}"
                        android:onClick="@{() -> viewModel.setDifficulty(@string/label_priority_1)}"
                        android:text="@string/label_priority_1" />

                    <RadioButton
                        android:id="@+id/difficulty_button_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:checked="@{viewModel.difficulty.equals(@string/label_priority_2)}"
                        android:onClick="@{() -> viewModel.setDifficulty(@string/label_priority_2)}"
                        android:text="@string/label_priority_2"
                        tools:checked="true"/>

                    <RadioButton
                        android:id="@+id/difficulty_button_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:checked="@{viewModel.difficulty.equals(@string/label_priority_3)}"
                        android:onClick="@{() -> viewModel.setDifficulty(@string/label_priority_3)}"
                        android:text="@string/label_priority_3" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/when_needed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/hint_when_needed"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/when_needed_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.neededBy}"
                        android:inputType="datetime" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/where_to_get"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/hint_where_to_get"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/where_to_get_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.purchaseLocation}"
                        android:inputType="textShortMessage" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cost_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/hint_cost"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cost_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.cost}"
                        android:inputType="number|numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TipTime.TextView"
                    android:text="@string/label_priority"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" />

                <RadioGroup
                    android:id="@+id/choose_priority_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/priority_button_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:checked="@{viewModel.priority.equals(@string/label_priority_1)}"
                        android:onClick="@{() -> viewModel.setPriority(@string/label_priority_1)}"
                        android:text="@string/label_priority_1" />

                    <RadioButton
                        android:id="@+id/priority_button_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:checked="@{viewModel.priority.equals(@string/label_priority_2)}"
                        android:onClick="@{() -> viewModel.setPriority(@string/label_priority_2)}"
                        android:text="@string/label_priority_2"
                        tools:checked="true"/>

                    <RadioButton
                        android:id="@+id/priority_button_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:checked="@{viewModel.priority.equals(@string/label_priority_3)}"
                        android:onClick="@{() -> viewModel.setPriority(@string/label_priority_3)}"
                        android:text="@string/label_priority_3" />

                </RadioGroup>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_add_item"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:gravity="center"
            app:backgroundTint="@color/colorAccent"
            android:text="@string/add_item_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
